--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,7 @@ webmaster_verifications:
   yandex: # fill in your Yandex verification code
   baidu: # fill in your Baidu verification code
   facebook: # fill in your Facebook verification code
+  naver: cd5da29d8b867b875cbb216f41ffea5eca7ffe00
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
